Your commit message here, e.g., Add Dockerfile, scripts, and CI workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Env variables
 .env
+.env.*
+
+# Docker volumes
+db_data/
+
+# VSCode / IDEs
+.vscode/
+.idea/
+
+# Logs
+*.log
